test/cli/test/policy-reports-skip-validation/kyverno-test.yaml
name: disallow-naked-pods
policies:
- policy.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: disallow-naked-pods
  resources:
  - blank-fail
  result: fail
  rule: validate-naked-pods
- kind: Pod
  policy: disallow-naked-pods
  resources:
  - blank-skip
  result: skip
  rule: validate-naked-pods
variables: values.yaml
