test/cli/test/policy-reports-skip-validation/policy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-naked-pods
spec:
  admission: true
  background: false
  rules:
  - context:
    - apiCall:
        jmesPath: metadata.annotations."policies.example.ignore-policy/disallow-naked-pods"
          || ''
        method: GET
        urlPath: /api/v1/namespaces/{{request.namespace}}
      name: ignorepolicy
    match:
      any:
      - resources:
          kinds:
          - Pod
    name: validate-naked-pods
    preconditions:
      all:
      - key: '{{ignorepolicy}}'
        operator: NotEquals
        value: ignore
    validate:
      deny:
        conditions:
          any:
          - key: ownerReferences
            operator: AnyNotIn
            value: '{{request.object.metadata.keys(@)}}'
      message: naked pods are not allowed
      failureAction: Audit
