test/cli/test/policy-reports-skip-validation/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
policies:
- name: disallow-naked-pods
  resources:
  - name: blank-skip
    values:
      ignorepolicy: ignore
  - name: blank-fail
    values:
      ignorepolicy: allowit
